--- a/compose.yaml
+++ b/compose.yaml
@@ -58,6 +58,8 @@ services:
     working_dir: /app
     command: >
       sh -c "npm install && npm run dev"
+    profiles:
+      - dev
     volumes:
       - ./client:/app
       - client-dev-node_modules:/app/node_modules
@@ -94,6 +96,8 @@ services:
     working_dir: /app
     command: >
       sh -c "npm install && npm run dev"
+    profiles:
+      - dev
     env_file:
       - .env
     volumes:
